# tetris

./: .gitignore  Cargo.toml  README.md  TODOs.org
src/: lib.rs  main.rs
static/: index.html  main.css
